--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.358.0",
     "next": "^14.2.1",
@@ -41,6 +42,8 @@
     "react-icons": "^5.0.1",
     "react-pdf-html": "^1.3.7",
     "react-pdf-tailwind": "^2.3.0",
+    "react-signature-canvas": "^1.0.6",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
