--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^5.0.1",
     "react-pdf-html": "^1.3.7",
     "react-pdf-tailwind": "^2.3.0",
+    "react-quill": "^2.0.0",
     "react-signature-canvas": "^1.0.6",
     "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
